Switch from URL to Path for notebook and binary locations